--- a/ToDoList_Malherbe_Bouttier/app/src/main/AndroidManifest.xml
+++ b/ToDoList_Malherbe_Bouttier/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ToDoList_Malherbe_Bouttier">
+        <activity android:name=".ListeActivity"></activity>
+        <activity android:name=".CalendarActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
