--- a/ToDoList_Malherbe_Bouttier/app/build.gradle
+++ b/ToDoList_Malherbe_Bouttier/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
 }
+apply {
+    plugin 'com.google.gms.google-services'
+}
 
 android {
     compileSdkVersion 30
@@ -35,6 +38,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment:2.3.1'
     implementation 'androidx.navigation:navigation-ui:2.3.1'
+    // Added
+    implementation platform('com.google.firebase:firebase-bom:26.1.0')
+    implementation 'com.google.firebase:firebase-analytics'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
