--- a/ToDoList_Malherbe_Bouttier/app/build.gradle
+++ b/ToDoList_Malherbe_Bouttier/app/build.gradle
@@ -38,9 +38,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment:2.3.1'
     implementation 'androidx.navigation:navigation-ui:2.3.1'
-    // Added
+
+    // Added for database
     implementation platform('com.google.firebase:firebase-bom:26.1.0')
     implementation 'com.google.firebase:firebase-analytics'
+    // Added for calendar
+    implementation 'com.applandeo:material-calendar-view:1.0.1'
+
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
