--- a/Todolist_Bouttier_Malherbe/app/src/main/AndroidManifest.xml
+++ b/Todolist_Bouttier_Malherbe/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Todolist_Bouttier_Malherbe">
-        <activity android:name=".EventOptionsActivity"></activity>
+        <activity android:name=".AddEventDetailActivity"></activity>
+        <activity android:name=".EventOptionsActivity" />
         <activity android:name=".EventDetailActivity" />
         <activity android:name=".AboutActivity" />
         <activity android:name=".MainActivity">
